# metrics-opentelemetry

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: identity.rs  lib.rs  otel.rs
tests/: tests.rs
